--- a/FtcRobotController/src/main/AndroidManifest.xml
+++ b/FtcRobotController/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:value="1" />
 
     <!-- The main robot controller activity -->
-    <activity android:name="org.firstinspires.ftc.robotcontroller.internal.PermissionValidatorWrapper"
+    <activity android:name="org.firstinspires.ftc.robotcontroller.internal.archive.PermissionValidatorWrapper"
               android:screenOrientation="fullUser"
               android:configChanges="orientation|screenSize"
               android:label="@string/app_name"
@@ -34,7 +34,7 @@
     </activity>
 
     <activity
-      android:name="org.firstinspires.ftc.robotcontroller.internal.FtcRobotControllerActivity"
+      android:name="org.firstinspires.ftc.robotcontroller.internal.archive.FtcRobotControllerActivity"
       android:screenOrientation="fullUser"
       android:configChanges="orientation|screenSize"
       android:label="@string/app_name"
